--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ a:hover {
             pt: `
                 <h2>Sobre Mim</h2>
                 <p>
-                    Sou um desenvolvedor de software apaixonado de Vila Velha, ES, Brasil, com uma forte base em tecnologias de front-end e back-end.
+                    Sou um desenvolvedor de software de Vila Velha, ES, Brasil, com uma forte base em tecnologias de front-end e back-end.
                     Adoro desenvolver aplicações web, desde a gestão de bancos de dados até a criação de interfaces amigáveis ao usuário.
                     Também me aventuro no desenvolvimento móvel com React Native quando necessário.
                     Meu objetivo é transformar as ideias dos clientes em ferramentas práticas e úteis.
