--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrick Lucas Martins</title>
-<meta name="description" content="Oferecemos soluções práticas, ágeis e altamente organizadas, especialmente desenvolvidas para atender às necessidades do seu negócio; Seu resultado é a nossa missão - Hub Result" data-rh="true">
+<meta name="description" content="Patrick Martins - Cybersecurity & Software Engineer (Linux | React & Native | Node.js | PHP | MySQL | MongoDB)" data-rh="true">
     <style>
     body {
     font-family: Arial, sans-serif;
