--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ a:hover {
         <section id="education">
             <h2>Education</h2>
             <p>Bachelor of Technology in Database Development, UNOPAR (2021 - 2023)</p>
-            <p>Studying for a bachelor's degree in Cyber ​​Defense, Estácio de Sá (2024 - 2026)</p>
+            <!-- <p>Studying for a bachelor's degree in Cyber ​​Defense, Estácio de Sá (2024 - 2026)</p> -->
         </section>
         <section id="skills">
             <h2>Skills</h2>
@@ -194,7 +194,6 @@ a:hover {
             pt: `
                 <h2>Educação</h2>
                 <p>Tecnólogo em Desenvolvimento de Banco de Dados, UNOPAR (2021 - 2023)</p>
-                <p>Cursando bacharelado em Defesa Cibernética, Estácio de Sá (2024 - 2026)</p>
             `
         },
         skills: {
