--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                             <li>LinkedIn: <a href="https://linkedin.com/in/p-luca" target="_blank">linkedin.com/in/p-luca</a></li>
                             <li>GitHub: <a href="https://github.com/closeluca1" target="_blank">github.com/closeluca1</a></li>
                             <li>Email: <a href="mailto:cvpatricklucasm@gmail.com">cvpatricklucasm@gmail.com</a></li>
-                            <li>YouTube: <a href="#" target="_blank">My Channel</a></li>
+                            <li>YouTube: <a href="https://www.youtube.com/@closeluca1" target="_blank">My Channel</a></li>
                         </ul>
                     `,
                     pt: `
