--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patrick Lucas Martins</title>
-    <meta name="description" content="Patrick Martins - Cybersecurity & Software Engineer (Linux | React & Native | Node.js | PHP | MySQL | MongoDB)">
+    <meta name="description" content="Patrick Martins - Cybersecurity & Software Engineer (Linux | React & Native | Angular | NextJs | Node.js | PHP | MySQL | MongoDB)">
     <style>
         body {
             font-family: Arial, sans-serif;
