--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
             padding-left: 20px;
             list-style-type: disc;
         }
+        li {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -104,6 +107,7 @@
             <li><strong>Competências:</strong> Análise de Dados, Automação de Processos, Gestão de Projetos, Excel, LGPD, Pacote Office.</li>
         </ul>
     </li>
+                
 
                 <li>
     <strong>Desenvolvedor Full Stack em Seu Menu Expert</strong>
