--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         ul {
             padding-left: 20px;
             list-style-type: disc;
+            margin-top: 5px;
         }
         li {
             margin-bottom: 10px;
