--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
         <strong>Auxiliar de Escritório na Prefeitura de Vila Velha (Jan 2022 - o momento)</strong>
         <ul>
             <li>Atuação na Secretaria de Educação, no setor de Prestação de Contas, com foco na análise e documentação de processos de despesas.</li>
-            <li>Desenvolvimento de uma planilha de controle financeiro em menos de três meses, melhorando a eficiência e a transparência dos relatórios fiscais.</li>
-            <li>Conhecimento avançado das leis de proteção de dados, incluindo a LGPD, com participação em cursos e eventos da ENAP.</li>
+            <li>Desenvolvimento de uma planilha de controle financeiro, melhorando a eficiência e a transparência dos relatórios fiscais.</li>
+            <li>Conhecimento das leis, incluindo a LGPD, com participação em cursos e eventos da ENAP.</li>
             <li><strong>Competências:</strong> Análise de Dados, Automação de Processos, Gestão de Projetos, Excel, LGPD, Pacote Office.</li>
         </ul>
     </li>
@@ -255,8 +255,8 @@
         <strong>Office Assistant at Vila Velha City Hall (Jan 2022 - Present)</strong>
         <ul>
             <li>Worked in the Education Department, in the Expense Control sector, focusing on the analysis and documentation of expense processes.</li>
-            <li>Developed a financial control spreadsheet in less than three months, improving the efficiency and transparency of fiscal reports.</li>
-            <li>Advanced knowledge of data protection laws, including LGPD, with participation in courses and events by ENAP.</li>
+            <li>Developed a financial control spreadsheet, improving the efficiency and transparency of fiscal reports.</li>
+            <li>Knowledge of laws, including LGPD, with participation in courses and events by ENAP.</li>
             <li><strong>Skills:</strong> Expense Analysis, Process Automation, Project Management, Excel, Word, LGPD.</li>
         </ul>
     </li>
@@ -327,8 +327,8 @@
         <strong>Auxiliar de Escritório na Prefeitura de Vila Velha (Jan 2022 - o momento)</strong>
         <ul>
             <li>Atuação na Secretaria de Educação, no setor de Prestação de Contas, com foco na análise e documentação de processos de despesas.</li>
-            <li>Desenvolvimento de uma planilha de controle financeiro em menos de três meses, melhorando a eficiência e a transparência dos relatórios fiscais.</li>
-            <li>Conhecimento avançado das leis de proteção de dados, incluindo a LGPD, com participação em cursos e eventos da ENAP.</li>
+            <li>Desenvolvimento de uma planilha de controle financeiro, melhorando a eficiência e a transparência dos relatórios fiscais.</li>
+            <li>Conhecimento leis, incluindo a LGPD, com participação em cursos e eventos da ENAP.</li>
             <li><strong>Competências:</strong> Análise de Dados, Automação de Processos, Gestão de Projetos, Excel, LGPD, Pacote Office.</li>
         </ul>
     </li>
