--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
         <section id="skills">
             <h2>Habilidades</h2>
             <ul>
-                <li>Front-end: React, Vue.js</li>
+                <li>Front-end: React, Angular, NextJs, Figma, Photoshop</li>
                 <li>Back-end: Node.js, PHP</li>
-                <li>Bancos de Dados: MySQL, MongoDB</li>
+                <li>Bancos de Dados: MySQL, MongoDB, Firebase</li>
                 <li>Desenvolvimento Mobile: React Native</li>
                 <li>Outros: Segurança da Informação, Lean Six Sigma (Green Belt)</li>
             </ul>
@@ -394,7 +394,7 @@
                     en: `
                         <h2>Skills</h2>
                         <ul>
-                            <li>Front-end: React, Vue.js</li>
+                            <li>Front-end: React, Angular, NextJs, Figma, Photoshop</li>
                             <li>Back-end: Node.js, PHP</li>
                             <li>Databases: MySQL, MongoDB</li>
                             <li>Mobile Development: React Native</li>
@@ -404,7 +404,7 @@
                     pt: `
                         <h2>Habilidades</h2>
                         <ul>
-                            <li>Front-end: React, Vue.js</li>
+                            <li>Front-end: React, Angular, NextJs, Figma, Photoshop</li>
                             <li>Back-end: Node.js, PHP</li>
                             <li>Bancos de Dados: MySQL, MongoDB</li>
                             <li>Desenvolvimento Mobile: React Native</li>
