--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <ul>
                             <li>Front-end: React, Angular, NextJs, Figma, Photoshop</li>
                             <li>Back-end: Node.js, PHP</li>
-                            <li>Databases: MySQL, MongoDB</li>
+                            <li>Databases: MySQL, MongoDB, Firebase</li>
                             <li>Mobile Development: React Native</li>
                             <li>Other: Information Security, Lean Six Sigma (Green Belt)</li>
                         </ul>
@@ -406,7 +406,7 @@
                         <ul>
                             <li>Front-end: React, Angular, NextJs, Figma, Photoshop</li>
                             <li>Back-end: Node.js, PHP</li>
-                            <li>Bancos de Dados: MySQL, MongoDB</li>
+                            <li>Bancos de Dados: MySQL, MongoDB, Firebase</li>
                             <li>Desenvolvimento Mobile: React Native</li>
                             <li>Outros: Segurança da Informação, Lean Six Sigma (Green Belt)</li>
                         </ul>
