--- a/index.html
+++ b/index.html
@@ -101,7 +101,17 @@
             <ul>
 
                 <li>
-        <strong>Auxiliar de Escritório na Prefeitura de Vila Velha (Jan 2022 - o momento)</strong>
+        <strong>Desenvolvedor Junior em BNP Serviços de Informática (Nov 2024 - Atual)</strong>
+        <ul>
+            <li>Experiência prática com Next.js no frontend e C# com arquitetura Vertical Slice no backend.</li>
+            <li>Participação no desenvolvimento de projetos que integram o melhor das tecnologias modernas, com foco em escalabilidade e performance.</li>
+            <li>Experiência adquirida em boas práticas de desenvolvimento, incluindo documentação, versionamento de código e metodologias.</li>
+            <li><strong>Competências:</strong> Trabalho em equipe, Desenvolvimento em CSharp, Desenvolvimento em Nextjs, AzureDevOps</li>
+        </ul>
+    </li>
+                
+                <li>
+        <strong>Auxiliar de Escritório em Prefeitura de Vila Velha (Jan 2022 - Nov 2024)</strong>
         <ul>
             <li>Atuação na Secretaria de Educação, no setor de Prestação de Contas, com foco na análise e documentação de processos de despesas.</li>
             <li>Desenvolvimento de uma planilha de controle financeiro, melhorando a eficiência e a transparência dos relatórios fiscais.</li>
@@ -180,8 +190,8 @@
             <h2>Habilidades</h2>
             <ul>
                 <li>Front-end: React, Angular, NextJs, Figma, Photoshop</li>
-                <li>Back-end: Node.js, PHP</li>
-                <li>Bancos de Dados: MySQL, MongoDB, Firebase</li>
+                <li>Back-end: Node.js, C# PHP</li>
+                <li>Bancos de Dados: MySQL, MongoDB, SQLite, Firebase</li>
                 <li>Desenvolvimento Mobile: React Native</li>
                 <li>Outros: Segurança da Informação, Lean Six Sigma (Green Belt)</li>
             </ul>
@@ -251,8 +261,18 @@
                         <h2>Experience</h2>
                         <ul>
 
+<li>
+    <strong>Junior Developer at BNP IT Services (Nov 2024 - Present)</strong>
+    <ul>
+        <li>Hands-on experience with Next.js on the frontend and C# with Vertical Slice architecture on the backend.</li>
+        <li>Development in projects that integrate cutting-edge technologies, focusing on scalability and performance.</li>
+        <li>Gained experience in best development practices, including documentation, version control, and methodologies.</li>
+        <li><strong>Skills:</strong> Teamwork, C# Development, Next.js Development, AzureDevOps</li>
+    </ul>
+</li>
+
                          <li>
-        <strong>Office Assistant at Vila Velha City Hall (Jan 2022 - Present)</strong>
+        <strong>Office Assistant at Vila Velha City Hall (Jan 2022 - Nov 2024)</strong>
         <ul>
             <li>Worked in the Education Department, in the Expense Control sector, focusing on the analysis and documentation of expense processes.</li>
             <li>Developed a financial control spreadsheet, improving the efficiency and transparency of fiscal reports.</li>
@@ -323,8 +343,18 @@
                         <h2>Experiência</h2>
                         <ul>
 
+         <li>
+        <strong>Desenvolvedor Junior em BNP Serviços de Informática (Nov 2024 - Atual)</strong>
+        <ul>
+            <li>Experiência prática com Next.js no frontend e C# com arquitetura Vertical Slice no backend.</li>
+            <li>Participação no desenvolvimento de projetos que integram o melhor das tecnologias modernas, com foco em escalabilidade e performance.</li>
+            <li>Experiência adquirida em boas práticas de desenvolvimento, incluindo documentação, versionamento de código e metodologias.</li>
+            <li><strong>Competências:</strong> Trabalho em equipe, Desenvolvimento em CSharp, Desenvolvimento em Nextjs, AzureDevOps</li>
+        </ul>
+    </li>
+
                 <li>
-        <strong>Auxiliar de Escritório na Prefeitura de Vila Velha (Jan 2022 - o momento)</strong>
+        <strong>Auxiliar de Escritório na Prefeitura de Vila Velha (Jan 2022 - Nov 2024)</strong>
         <ul>
             <li>Atuação na Secretaria de Educação, no setor de Prestação de Contas, com foco na análise e documentação de processos de despesas.</li>
             <li>Desenvolvimento de uma planilha de controle financeiro, melhorando a eficiência e a transparência dos relatórios fiscais.</li>
@@ -395,8 +425,8 @@
                         <h2>Skills</h2>
                         <ul>
                             <li>Front-end: React, Angular, NextJs, Figma, Photoshop</li>
-                            <li>Back-end: Node.js, PHP</li>
-                            <li>Databases: MySQL, MongoDB, Firebase</li>
+                            <li>Back-end: Node.js, C#, PHP</li>
+                            <li>Databases: MySQL, MongoDB, SQLite, Firebase</li>
                             <li>Mobile Development: React Native</li>
                             <li>Other: Information Security, Lean Six Sigma (Green Belt)</li>
                         </ul>
@@ -405,8 +435,8 @@
                         <h2>Habilidades</h2>
                         <ul>
                             <li>Front-end: React, Angular, NextJs, Figma, Photoshop</li>
-                            <li>Back-end: Node.js, PHP</li>
-                            <li>Bancos de Dados: MySQL, MongoDB, Firebase</li>
+                            <li>Back-end: Node.js, C# PHP</li>
+                            <li>Bancos de Dados: MySQL, MongoDB, SQLite, Firebase</li>
                             <li>Desenvolvimento Mobile: React Native</li>
                             <li>Outros: Segurança da Informação, Lean Six Sigma (Green Belt)</li>
                         </ul>
